DFR-2004: list for hearing - moved bulkprint logic into submit handler